syntax = "proto3";

package intelligence;

option java_multiple_files = true;
option java_package = "protos";
option java_outer_classname = "IntelligenceProtos";

// payload type: 0x01 temperature sensor; 0x10 message

message IntelligenceMsg {
  bytes messageID = 1;
  bytes payload = 2;
  int32 payloadType = 3;
  fixed64 checkSum = 4;
  optional int32 serialNumber = 5;
}

